<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2010 Felix Bechstein
	-->
	<!--
		This file is part of AdBlock. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
	-->
	<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
	-->
<resources>
	<string name="app_name">AdBlock</string>
	<string name="app_version">0.5</string>
	<string name="changelog_">Changelog</string>
	<string name="port_">Port:</string>
	<string name="start_">Start/Reload</string>
	<string name="stop_">Stop Proxy</string>
	<string name="filter_">Filter (part of an URL):</string>
	<string name="traffic_">Web Traffic Log:</string>
	<string name="add_filter">Add filter</string>
	<string name="import_">Import</string>
	<string name="import_url_">Import URL?</string>
	<string name="export_">Export</string>
	<string name="more_">More Apps..</string>
	<string name="about_">About</string>
	<string name="about0">AdBlock blocks HTTP requests. It may be used for blocking unwanted ads on webpages. It will NOT block ads in apps, because admob don\'t uses APN\'s proxy settings.</string>
	<string name="about1">Set APN\'s proxy preferences to localhost withi the port set in main application.</string>
	<string name="about2">Dear Google, please contact me before deletei this app from market.</string>
	<string name="author_">Author:</string>
	<string name="author">Felix Bechstein &lt;f@ub0r.de&gt;</string>
	<string name="license">GPLv3 - see http://www.gnu.org/licenses/gpl-3.0.txt</string>
	<string name="license_">License:</string>
	<string name="source">http://github.com/felixb/adBlock</string>
	<string name="source_">Sourcescode:</string>
	<string name="website_">Website:</string>
	<string name="website">http://code.google.com/p/andblock/</string>
	<string name="donate_">Donate</string>
	<string name="donate_url">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=8668940</string>
	<string name="proxy_running">Proxy is running on port</string>
	<string name="proxy_stopped">Proxy stopped</string>
	
	<string name="notify_proxy">AdBlock Proxy</string>
	<string name="default_filter">/ads/\n.ads/</string>
	<string-array name="itemDialog">
		<item>Edit This Entry</item>
		<item>Delete This Entry</item>
	</string-array>

	

	
</resources>

