<?xml version="1.0" encoding="utf-8"?>
<!-- 		Copyright (C) 2010 Felix Bechstein -->
<!--
		This file is part of AdBlock. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
-->
<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LL1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
         >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port_" />

        <EditText
            android:id="@+id/port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="10dip"
            android:inputType="number" />

        <Button
            android:id="@+id/start_service"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-6dp"
            android:layout_weight="1"
            android:text="@string/start_" />

        <Button
            android:id="@+id/stop_service"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-6dp"
            android:layout_weight="1"
            android:text="@string/stop_" />



        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/LL5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LL1"
        android:layout_weight="0" >

        <Button
            android:id="@+id/start_log"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-6dp"
            android:layout_weight="1"
            android:text="Start Log" />

        <Button
            android:id="@+id/stop_log"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-6dp"
            android:layout_weight="1"
            android:text="Stop Log" />



        <Button
            android:id="@+id/export_log"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-6dp"
            android:layout_weight="1"
            android:text="Export Log" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LL5"
        android:layout_weight="0" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/filter_" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/traffic_" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:layout_below="@id/LL2"
        android:layout_weight="0" >

        <ListView
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5" 
            
            />

        <ListView
            android:id="@+id/lv_web_traffic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5" 
            
            >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="0" >

        <EditText
            android:id="@+id/filter_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textUri" />

        <Button
            android:id="@+id/filter_add_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/add_filter" />
    </LinearLayout>

</RelativeLayout>
